The control list will no longer appear if the yc_video code has no content.

--- a/ytc-shortcode.css
+++ b/ytc-shortcode.css
@@ -16,6 +16,10 @@
     max-width: 450px;
 }
 
+.youtube-embed.no-controls .youtube-wrapper {
+    max-width: none;
+}
+
 .swfobject-wrapper {
     position: relative;
     width: 100%;
